--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.20",
     "@reduxjs/toolkit": "^2.2.1",
+    "eas-cli": "^7.3.0",
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
     "jsonpack": "^1.1.5",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-qrcode-svg": "^6.3.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "^15.0.0",
     "react-native-uuid": "^2.0.1",
     "react-redux": "^9.1.0"
   },
